# ROS2_projects

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
proj_1/robot_pkg_1/: CMakeLists.txt  package.xml
proj_1/robot_pkg_1/src/: sensor_pub.cpp  subscriberNode.cpp  testNode.cpp
proj_1/robot_pkg_1/srv/: SetVelocity.srv
proj_2/carter_nav_ws/: frames_2026-04-25_17.04.13.gv
proj_2/carter_nav_ws/src/carter_navigation/: package.xml  setup.cfg  setup.py
proj_2/carter_nav_ws/src/carter_navigation/launch/: slam_carter.launch.py
proj_2/carter_nav_ws/src/carter_teleop/: CMakeLists.txt  package.xml
proj_2/carter_nav_ws/src/carter_teleop/src/: carter_commander.cpp
